# llm_from_scratch

ch02/sliding_window/: gpt_data_loader.py  main.py  pyproject.toml
ch02/tokenizer/: main.py  simple_tokenizer_v1.py
