[project]
name = "sliding-window"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu"}
]
torchvision = [
    { index = "pytorch-cpu"}
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
